--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,9 @@ theme:
     - navigation.tabs
     - navigation.sections
     - navigation.top
+    - navigation.expand
+    - navigation.indexes
+    - navigation.tracking
     - search.suggest
     - search.highlight
     - content.code.copy
@@ -48,7 +51,7 @@ markdown_extensions:
 
 nav:
   - Trang chủ: index.md
-  - Về tôi
+  - Về tôi:
   - Java:
       - Tổng quan: java/index.md
       - Java Cơ bản:
