--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ markdown_extensions:
 
 nav:
   - Trang chủ: index.md
-  - Về tôi:
+  - Về tôi: about-me.md
   - Java:
       - Tổng quan: java/index.md
       - Java Cơ bản:
