--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,10 +52,10 @@ markdown_extensions:
 nav:
   - Trang chủ: index.md
   - Về tôi: about-me.md
-  - Java:
+  - Java: java/oop.md
     - OOP: java/oop.md
-      - java/oop.md
-      - java/oop.md
+      - Abstract: java/oop.md
+      - DRY: java/oop.md
     - Servlet: java/servlet.md
     - Spring boot: java/springboot.md
     - Best practices: java/best-practice.md
